[project]
name = "predictor"
version = "0.0.1"
authors = [
    { name = "Noemi Lucchi", email = "noemi.lucchi@bse.eu" },
    { name = "Marta Sala", email = "marta.sala@bse.eu" }
]
description = "A package to predict the probability of having diabetes mellitus"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"